test/testdata/test_env/env.bad_config.compile.err
ERROR: ../../test/testdata/test_env/env.bad_config.yaml:40:1: field redeclaration error: variables
 | variables:
 | ^
ERROR: ../../test/testdata/test_env/env.bad_config.yaml:53:11: invalid type. enumDescriptions set, enum must be set.
 |           - 'the resource is enabled.'
 | ..........^
ERROR: ../../test/testdata/test_env/env.bad_config.yaml:66:11: value not assignable to schema type: value=map, schema=list
 |           type: string
 | ..........^
ERROR: ../../test/testdata/test_env/env.bad_config.yaml:66:11: expected list type, found: map
 |           type: string
 | ..........^
